--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -42,13 +42,13 @@ jobs:
           password: ${{ secrets.ftp_password }}
       - name: Run Functional Test Cases
         run: |
-          /opt/SmartBear/ReadyAPI/bin/testrunner.bat -FPDF -f/opt/test-reports/ -R"Project Report" /opt/poc/tests/functional/sample_readyapi_project.xml
+          sudo /opt/SmartBear/ReadyAPI/bin/testrunner.sh -FPDF -f/opt/test-reports/ -R"Project Report" /opt/poc/tests/functional/sample_readyapi_project.xml
       - name: Run Security Test Cases
         run: |
-          /opt/SmartBear/ReadyAPI/bin/securitytestrunner.bat -FPDF -f/opt/test-reports/ -R"Project Report" /opt/poc/tests/security/sample_readyapi_project.xml
+          sudo /opt/SmartBear/ReadyAPI/bin/securitytestrunner.sh -FPDF -f/opt/test-reports/ -R"Project Report" /opt/poc/tests/security/sample_readyapi_project.xml
       - name: Run Perfomance Test Cases
         run: |
-          /opt/SmartBear/ReadyAPI/bin/loadtestrunner.bat -L600:0:0 -FPDF "-rc:/opt/test-reports/" "/opt/poc/tests/load/sample_readyapi_project.xml" -nMassLoad1
+          sudo /opt/SmartBear/ReadyAPI/bin/loadtestrunner.sh -L600:0:0 -FPDF "-rc:/opt/test-reports/" "/opt/poc/tests/load/sample_readyapi_project.xml" -nMassLoad1
   deploy-dev:
     runs-on: ubuntu-latest
     needs: [build]
